--- a/competitors/static/competitors/css/person.css
+++ b/competitors/static/competitors/css/person.css
@@ -2,11 +2,11 @@ body {
 	background-color: #A9A9A9 !important;
 }
 
-#navbar-container{
+/*#navbar-container{
 	background: #FF8C00 !important;
 }
 
-/*#header-wrapper {
+#header-wrapper {
 	height: 70px;
 	width: 100%;
 	padding: 0;
@@ -14,17 +14,17 @@ body {
 	background: #FF8C00;
 	color: white;
 }
-
+*/
 #header {
 	position: absolute;
 	top: 0;
 	height: 280px;
 	width: 100%;
 	background: #FFDAB9;
-	z-index: -1;
+	z-index: 0;
 }
 
-#header-wrapper small {
+/*#header-wrapper small {
 	height: 70px;
   	line-height: 70px;
  	white-space: nowrap;
@@ -33,8 +33,8 @@ body {
 #header-search-bar {
 	margin-top: 20px;
 	margin-top: 20px;
-}*/
-
+}
+*/
 /*#logo-wrapper {
 	margin-top: 0.5em;	
 }*/
@@ -72,7 +72,7 @@ body {
 	background: white;
 	border-left: 1px solid #ddd;
 	border-right: 1px solid #ddd;
-	padding: 10% 20%;
+	padding: 5% 10%;
 }
 
 
@@ -82,7 +82,7 @@ body {
 	box-shadow: 5px 5px 5px #888888;
 	height: 200px;
 	width: 200px;
-	background-image: url('../media/JohnTerry.jpg');
+	/*background-image: url('../media/JohnTerry.jpg');*/
 	background-repeat: no-repeat;
 	background-size: cover;
 }
