--- a/competitors/static/competitors/css/profile.css
+++ b/competitors/static/competitors/css/profile.css
@@ -1,3 +1,10 @@
+#navbar-container{
+	background: #FF8C00 !important;
+}
+body {
+	background-color: #A9A9A9 !important;
+}
+
 #imageCanvas{
 	position: relative;
 	top: 0;
