--- a/competitors/templates/competitors/navbar.html
+++ b/competitors/templates/competitors/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar" id="navbar-container">
+<nav class="navbar" id="navbar-container" ng-controller="login">
   	<div class="container-fluid">
 	    <div class="navbar-header" id="logo-wrapper">
 	      <a class="navbar-brand" href="/" id="logo"><img src="{{STATIC_URL}}competitors/img/logo1.png" alt="logo" width="150" height="25"></a>
