reset to version

--- a/competitors/templates/competitors/navbar.html
+++ b/competitors/templates/competitors/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar" id="navbar-container">
+<nav class="navbar" id="navbar-container" ng-controller="login">
   	
 	    <div class="navbar-header col-sm-offset-1 col-sm-3 col-md-offset-1 " id="logo-wrapper">
 	    	<span class="helper"></span>
