--- a/competitors/templates/competitors/profile.html
+++ b/competitors/templates/competitors/profile.html
@@ -16,7 +16,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.13/angular.min.js"></script>
 
 </head>
-<body ng-controller="MainCtl">
+<body ng-controller="profile">
     <div id="header">
         {% include 'competitors/navbar.html' %}
         {% csrf_token %}
@@ -188,7 +188,7 @@
 <script type="text/javascript" src="{{STATIC_URL}}competitors/js/login.js"></script>
 <script type="text/javascript" src="{{STATIC_URL}}competitors/js/base.js"></script>
 <script type="text/javascript">
-competitorsApp.controller('MainCtl',['$scope', function($scope){
+competitorsApp.controller('profile',['$scope', function($scope){
     {% if currentUser.user.username = user.username %}
         $scope.self = true;
     {% endif %}
