--- a/competitors/templates/competitors/navbar.html
+++ b/competitors/templates/competitors/navbar.html
@@ -1,7 +1,8 @@
 <nav class="navbar" id="navbar-container" ng-controller="login">
-  	<div class="container-fluid">
-	    <div class="navbar-header" id="logo-wrapper">
-	      <a class="navbar-brand" href="/" id="logo"><img src="{{STATIC_URL}}competitors/img/logo1.png" alt="logo" width="150" height="25"></a>
+ 	
+	    <div class="navbar-header col-sm-offset-1 col-sm-3 col-md-offset-1 " id="logo-wrapper">
+	    	<span class="helper"></span>
+	      	<a href="/" id="logo"><img ng-href="/" src="{{STATIC_URL}}competitors/img/logo1.png" alt="logo"></a>
 	    </div>
 	    <div class="collapse navbar-collapse" id="sign">
 	    	{% if user.is_authenticated %} 
