--- a/competitors/templates/competitors/index.html
+++ b/competitors/templates/competitors/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="competitorsApp">
+<html lang="en" ng-app="competitorsApp" ng-controller="index">
 <head>
 	<title>Competitors</title>
 	<meta charset="UTF-8">
