resolve sign up angular error

--- a/competitors/templates/registration/register.html
+++ b/competitors/templates/registration/register.html
@@ -54,6 +54,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.13/angular.min.js"></script>
 <script src="{{STATIC_URL}}competitors/js/app.js"></script>
 <script src="{{STATIC_URL}}competitors/js/register.js"></script>
+<script src="{{STATIC_URL}}competitors/js/login.js"></script>
 <script>
     competitorsApp.controller('register',['$scope','$http','$timeout',function($scope,$http,$timeout){
 
