--- a/competitors/templates/competitors/navbar.html
+++ b/competitors/templates/competitors/navbar.html
@@ -17,7 +17,7 @@
 
 			{% endif %}
 	    </div>
-	    <div class="col-xs-3 col-sm-3 col-md-3 cp-header-container pull-right">
+	    <div class="col-xs-3 col-sm-3 col-md-3 cp-header-container">
 	    	<div class="visible-xs-inline cp-header-wrapper">
 				<span>Collapse</span>
 			</div>
