--- a/competitors/templates/competitors/navbar.html
+++ b/competitors/templates/competitors/navbar.html
@@ -1,4 +1,62 @@
-<nav class="navbar" id="navbar-container" ng-controller="login">
+<!-- <nav class="cp-smaller-navbar navbar-static-top">
+
+  <div class="container-fluid">
+    <div class="cp-smaller-navbar-header">
+        <a class="navbar-brand" href="/" id="logo"><img src="{{STATIC_URL}}competitors/img/logo1.png" color="red" alt="logo" width="150" height="25"></a>
+        <button type="button" class="btn btn-lg navbar-toggle collapsed cp-navbar-button" data-toggle="collapse" data-target="#cp-navbar-collapse">
+          <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
+        </button>
+    </div>
+    <div class="navbar-collapse collapse" id="cp-navbar-collapse" aria-expanded="false" style="height: 1px;">
+      <ul>
+          <li><a href="/">Sign In</a></li>
+          <li><a href="/">Sign Up</a></li>
+      </ul>
+    </div>
+  </div>
+</nav> -->
+
+<!-- <nav class="navbar-static-top cp-smaller-navbar">
+  <div class="container-fluid">
+    <div class="cp-navbar-header">
+      <a class="cp-navbar-brand" href="/" id="logo"><img src="{{STATIC_URL}}competitors/img/logo1.png" color="red" alt="logo" width="150" height="25"></a>
+        <button type="button" class="btn btn-lg navbar-toggle collapsed cp-navbar-button" data-toggle="collapse" data-target="#cp-navbar-collapse">
+          <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
+        </button>
+    </div>
+    <div class="navbar-collapse collapse in" id="cp-navbar-collapse" aria-expanded="false" style="height: 1px;">
+
+      <ul class="nav navbar-nav">
+          <li><a class="cp-navbar-a" href="/users/sign_in">Sign In</a></li>
+          <li><a class="cp-navbar-a" href="/users/sign_up">Sign Up</a></li>
+      </ul>
+    </div>
+  </div>
+</nav> -->
+
+<nav class="cp-smaller-navbar navbar-static-top">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <a class="cp-navbar-brand" href="/" id="logo"><img src="{{STATIC_URL}}competitors/img/logo1.png" color="red" alt="logo" width="150" height="25"></a>
+        <button type="button" class="btn btn-lg navbar-toggle collapsed cp-navbar-button" data-toggle="collapse" data-target="#cp-navbar-collapse">
+          <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
+        </button>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="navbar-collapse collapse in" id="cp-navbar-collapse" aria-expanded="false" style="height: 1px;">
+      <ul class="nav navbar-nav navbar-right">
+          <li><a class="cp-navbar-a" href="/">Sign In</a></li>
+          <li><a class="cp-navbar-a" href="/">Sign Up</a></li>
+      </ul>
+
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
+
+<div class="container">
+<nav class="navbar cp-regular-navbar" id="navbar-container" ng-controller="login">
 	    <div class="navbar-header col-xs-3 col-sm-offset-1 col-sm-3 col-md-offset-1 cp-header-container" id="logo-wrapper">
 	      	<a class="form cp-header-wrapper" href="/" id="logo">
 	      		<img ng-href="/" src="{{STATIC_URL}}competitors/img/logo1.png" alt="logo">
@@ -25,13 +83,13 @@
 	    	{% if signuppage == True %}
 					<a href="login" id="login"><small class="pull-right">Already have an account?</small></a>
 			{% else %}
-		    	{% if user.is_authenticated %} 
+		    	{% if user.is_authenticated %}
 			    	<a id="signnnnnnnnnnn" href="{% url 'django.contrib.auth.views.logout' %}?next={% firstof request.path %}"><button class="btn btn-danger cp-header-content">sign out</button></a>
 			    	<a id="redirect" href="{% url 'see_profile' user.username %}"><button class="btn btn-link btn-lg cp-header-content">{{ user.username }}</button></a>
 				{% else %}
-					
+
 		    		<button type="button" class="btn btn-warning cp-header-content" data-toggle="modal" data-target="#loginbox"> Sign in </button>
-						<a href="{% url 'register' %}"><button type="button" class="btn btn-default cp-header-content"> Sign up </button></a>		
+						<a href="{% url 'register' %}"><button type="button" class="btn btn-default cp-header-content"> Sign up </button></a>
 				{% endif %}
 			{% endif %}
 			</div>
@@ -82,5 +140,6 @@
 		    	</div><!-- /.modal-content -->
 		  	</div><!-- /.modal-dialog -->
 		</div><!-- /.modal -->
-  	
+
 </nav>
+</div>
