--- a/competitors/templates/registration/register.html
+++ b/competitors/templates/registration/register.html
@@ -14,6 +14,7 @@
     <div id="header">
         {% include 'competitors/navbar.html' %}
     </div>
+
     <div id="body" class="row cp-container">
         <div class="col-xs-12 col-sm-12 col-md-offset-1 col-md-10 col-lg-offset-1 col-lg-10" id="form-wrapper">
             <h2 class="col-sm-offset-2" id="form-head"> Welcome! </h2>
@@ -34,7 +35,7 @@
                     <div class="agreement col-sm-offset-2">
                         <label>
                             <input ng-model="register_agreement" required name="agreement" type="checkbox"/>
-                            I have read and agree with the <a href="javascript:;" data-toggle="modal" data-target="#agreementbox">Agreement</a>
+                            I have read and agree with the <a href="" data-toggle="modal" data-target="#agreementbox">Agreement</a>
                         </label>
                     </div>
                 </div>
@@ -46,8 +47,9 @@
             </form>
         </div>
     </div>
-{% include 'competitors/agreement.html'%}
+    <modal-dialog></model-dialog>
 {% include 'competitors/footer.html' %}
+
 <script src="{{STATIC_URL}}competitors/js/jquery.min.js"></script>
 <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
@@ -55,6 +57,7 @@
 <script src="{{STATIC_URL}}competitors/js/app.js"></script>
 <script src="{{STATIC_URL}}competitors/js/register.js"></script>
 <script src="{{STATIC_URL}}competitors/js/login.js"></script>
+<script src="{{STATIC_URL}}competitors/js/agreement.js"></script>
 <script>
     competitorsApp.controller('register',['$scope','$http','$timeout',function($scope,$http,$timeout){
 
