--- a/competitors/templates/registration/register.html
+++ b/competitors/templates/registration/register.html
@@ -57,10 +57,14 @@
 <script src="{{STATIC_URL}}competitors/js/app.js"></script>
 <script src="{{STATIC_URL}}competitors/js/register.js"></script>
 <script src="{{STATIC_URL}}competitors/js/login.js"></script>
-<script src="{{STATIC_URL}}competitors/js/agreement.js"></script>
+<script src="{{STATIC_URL}}competitors/js/directives/agreement.js"></script>
+<script src="{{STATIC_URL}}competitors/js/directives/checkUsername.js"></script>
+<script src="{{STATIC_URL}}competitors/js/directives/checkEmail.js"></script>
+<script src="{{STATIC_URL}}competitors/js/directives/pwMatch.js"></script>
+
 <script>
     competitorsApp.controller('register',['$scope','$http','$timeout',function($scope,$http,$timeout){
-
+            console.log($scope.formss);
             $scope.register_agreement = false;
             {% for field in form %}
                 var {{field.name}}_timer;
@@ -105,79 +109,5 @@
                 );
             {% endfor %}
         }
-
-    ]).directive('checkusername', ['$q','$http',function($q,$http) {
-        return {
-            require: 'ngModel',
-            restrict: '',
-            link: function(scope, elm, attrs, ctrl, http) {
-                ctrl.$asyncValidators.usernameTaken = function(modelValue, viewValue) {
-                    var def = $q.defer();
-                    var valid;
-                    $http({
-                        method: 'POST',
-                        url: "api/checkusername",
-                        data: $.param({username:modelValue}),
-                        headers: {'Content-Type': 'application/x-www-form-urlencoded'}
-                    })
-                    .success(function(data, status, headers, config){
-                        if (data == ""){
-                            def.resolve();
-                        }else{
-                            def.reject();
-                        }
-                    }).error(function(data, status, headers, config){
-                            def.reject();
-                    });
-                    return def.promise;
-                };
-
-            }
-        };
-    }]).directive('checkemail', ['$q','$http',function($q,$http) {
-        return {
-            require: 'ngModel',
-            restrict: '',
-            link: function(scope, elm, attrs, ctrl, http) {
-                ctrl.$asyncValidators.emailTaken = function(modelValue, viewValue) {
-                    var def = $q.defer();
-                    var valid;
-                    $http({
-                        method: 'POST',
-                        url: "api/checkemail",
-                        data: $.param({email:modelValue}),
-                        headers: {'Content-Type': 'application/x-www-form-urlencoded'}
-                    })
-                    .success(function(data, status, headers, config){
-                        if (data == ""){
-                            def.resolve();
-                        }else{
-                            def.reject();
-                        }
-                    }).error(function(data, status, headers, config){
-                            def.reject();
-                    });;
-                    return def.promise;
-                };
-
-            }
-        };
-    }]).directive('pwMatch', function() {
-        return {
-            require: 'ngModel',
-            restrict: '',
-            link: function(scope, elm, attrs, ctrl, http) {
-                var checker = function() {
-                    var e1 = scope.$eval(attrs.ngModel);
-                    var e2 = scope.$eval(attrs.pwMatch);
-                    var  match = (e1==e2)
-                    return e1 == e2;
-                };
-                scope.$watch(checker, function (n) {
-                    ctrl.$setValidity("pwNotMatch", n);
-                });
-
-            }
-        };
-    });
+    ])
 </script>
