--- a/competitors/templates/competitors/profile.html
+++ b/competitors/templates/competitors/profile.html
@@ -185,7 +185,7 @@
 </body>
 <script src="{{STATIC_URL}}competitors/js/app.js"></script>
 <script type="text/javascript" src="{{STATIC_URL}}competitors/js/profile.js"></script>
-<script type="text/javascript" src="{{STATIC_URL}}competitors/js/login.js"></script>
+<script type="text/javascript" src="{{STATIC_URL}}competitors/js/controllers/login.js"></script>
 <script type="text/javascript" src="{{STATIC_URL}}competitors/js/base.js"></script>
 <script type="text/javascript">
 competitorsApp.controller('profile',['$scope', function($scope){
