--- a/competitors/templates/registration/register.html
+++ b/competitors/templates/registration/register.html
@@ -56,7 +56,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.13/angular.min.js"></script>
 <script src="{{STATIC_URL}}competitors/js/app.js"></script>
 <script src="{{STATIC_URL}}competitors/js/register.js"></script>
-<script src="{{STATIC_URL}}competitors/js/login.js"></script>
+<script src="{{STATIC_URL}}competitors/js/controllers/login.js"></script>
 <script src="{{STATIC_URL}}competitors/js/directives/agreement.js"></script>
 <script src="{{STATIC_URL}}competitors/js/directives/checkUsername.js"></script>
 <script src="{{STATIC_URL}}competitors/js/directives/checkEmail.js"></script>
