--- a/competitors/templates/competitors/index.html
+++ b/competitors/templates/competitors/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="competitorsApp" ng-controller="index">
+<html lang="en" ng-app="competitorsApp">
 <head>
 	<title>Competitors</title>
 	<meta charset="UTF-8">
@@ -14,7 +14,7 @@
   <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}competitors/css/index.css">
 </head>
 
-<body>
+<body ng-controller="index">
 	<input type="hidden" name="redirect" value="{% firstof request.path '/' %}">
 	<div id="fullpage">
 	<!-- New Nav area -->
@@ -81,6 +81,7 @@
 		</div>
 	</div>
 </body>
+
 <script src="{{STATIC_URL}}competitors/js/jquery.min.js"></script>
 <script src="{{STATIC_URL}}competitors/js/jquery.easings.min.js"></script>
 <!-- This following line is only necessary in the case of using the plugin option `scrollOverflow:true` -->
@@ -92,9 +93,13 @@
 <script src="{{STATIC_URL}}competitors/js/app.js"></script>
 <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
 <script type="text/javascript" src="{{STATIC_URL}}competitors/js/index.js"></script>
-<script type="text/javascript" src="{{STATIC_URL}}competitors/js/login.js"></script>
+
 <script type="text/javascript" src="{{STATIC_URL}}competitors/js/base.js"></script>
+<script type="text/javascript" src="{{STATIC_URL}}competitors/js/app.js"></script>
+<script type="text/javascript" src="{{STATIC_URL}}competitors/js/controllers/login.js"></script>
+<script type="text/javascript" src="{{STATIC_URL}}competitors/js/controllers/index.js"></script>
 <script type="text/javascript">
+
   $(document).ready(function() {
     $('#fullpage').fullpage({
       sectionsColor: ['#A9A9A9', '#A9A9A9'],
