--- a/competitors/templates/registration/register.html
+++ b/competitors/templates/registration/register.html
@@ -14,20 +14,22 @@
     <div id="header">
         {% include 'competitors/navbar.html' %}
     </div>
-
+    <input ng-model="value" ng-init="value=4"/>
     <div id="body" class="row cp-container">
         <div class="col-xs-12 col-sm-12 col-md-offset-1 col-md-10 col-lg-offset-1 col-lg-10" id="form-wrapper">
             <h2 class="col-sm-offset-2" id="form-head"> Welcome! </h2>
-            <form action="{% url 'register' %}" name="signupform" class="form-horizontal" method="POST">
+            <form action="{% url 'register' %}" name="signupform" ng-model="register" ng-init="register=[]" class="form-horizontal" method="POST">
                 {% for field in form %}
-                <div class="row signupfield form-group has-feedback" ng-class="{'has-error':register_{{field.name}}_init && register_{{field.name}}_has_error,'has-success':register_{{field.name}}_init &&  !register_{{field.name}}_has_error}">
+                <div class="row signupfield form-group has-feedback" ng-class="{'has-error':register.{{field.name}}.init && register.{{field.name}}.has_error,'has-success':register.{{field.name}}.init &&  !register.{{field.name}}.has_error}">
                     <label class="col-sm-2 control-label">{{field.label}}</label>
                     <div class="col-sm-6">
                         {{field}}
-                        <span class="glyphicon form-control-feedback" ng-class="{'glyphicon-ok-sign':register_{{field.name}}_init &&  !register_{{field.name}}_has_error,'glyphicon-remove-sign':register_{{field.name}}_init && register_{{field.name}}_has_error}" aria-hidden="true"></span>
+
+                        <div ng-model="register.{{field.name}}" ng-init="register.{{field.name}} = []"></div>
+                        <span class="glyphicon form-control-feedback" ng-class="{'glyphicon-ok-sign':register.{{field.name}}.init &&  !register.{{field.name}}.has_error,'glyphicon-remove-sign':register.{{field.name}}.init && register.{{field.name}}.has_error}" aria-hidden="true"></span>
                     </div>
-                     <div class="col-sm-4 error" ng-show="register_{{field.name}}_init && register_{{field.name}}_has_error">
-                        //register_{{field.name}}_error//
+                     <div class="col-sm-4 error" ng-show="register.{{field.name}}.init && register.{{field.name}}.has_error">
+                        //register.{{field.name}}.error//
                      </div>
                 </div>
                 {% endfor %}
@@ -64,50 +66,64 @@
 
 <script>
     competitorsApp.controller('register',['$scope','$http','$timeout',function($scope,$http,$timeout){
-            console.log($scope.formss);
             $scope.register_agreement = false;
-            {% for field in form %}
-                var {{field.name}}_timer;
-                var timer;
-                // console.log({{field.name}}_timer);
-                $scope.$watch('signupform.{{field.name}}.$viewValue',
+            var list = ["first_name","last_name","username","email","password1","password2"];
+
+            // $scope.$watch("register", function(){
+            //     console.log($scope.register);
+            //     for (field in $scope.register){
+            //         console.log(field)
+            //     }
+            // })
+            $timeout(function(){
+                for (f1 in list){
+                    var field = list[f1]
+                console.log(field)
+                $scope.$watch('signupform.'+field+'.$viewValue',
                     function(newVal){
-                        $timeout.cancel({{field.name}}_timer);
-                        {{field.name}}_timer = $timeout(function() {
-                            var input = $scope.signupform.{{field.name}};
+                        console.log(field);
+                        $timeout.cancel($scope.register[field].timer);
+                        $scope.register[field].timer = $timeout(function() {
+                            var input = $scope.signupform[field];
                             console.log(newVal);
                             if (newVal){
-                                $scope.register_{{field.name}}_init = true;
-                            }else if (newVal == undefined && $scope.register_{{field.name}}_init == undefined){
-                                $scope.register_{{field.name}}_init = false;
-                            }else if ($scope.register_{{field.name}}_init == false){
-                                $scope.register_{{field.name}}_init = true;
-                                // console.log("{{field.name}}")
+                                $scope.register[field].init = true;
+                                console.log(field + $scope.register[field].init);
+                            }else if (newVal == undefined && $scope.register[field].init == undefined){
+                                $scope.register[field].init = false;
+                                console.log(field + $scope.register[field].init);
+                            }else if ($scope.register[field].init == false){
+                                $scope.register[field].init = true;
+                                console.log(field + $scope.register[field].init);
                             }
-                            $scope.register_{{field.name}}_has_error = input.$invalid;
-                            if (input.$invalid && $scope.register_{{field.name}}_init){
+                            $scope.register[field].has_error = input.$invalid;
+                            if (input.$invalid && $scope.register[field].init){
                                 if (input.$error.required){
-                                    $scope.register_{{field.name}}_error = "This field is required";
+                                    $scope.register[field].error = "This field is required";
                                 }else if (input.$error.pattern){
-                                    $scope.register_{{field.name}}_error = "Can only contain letters and/or numbers";
+                                    $scope.register[field].error = "Can only contain letters and/or numbers";
                                 }else if (input.$error.minlength){
-                                    $scope.register_{{field.name}}_error = "At least " + $('form[name=signupform] input[name={{field.name}}]').attr('ng-minlength') + " letters";
+                                    $scope.register[field].error = "At least " + $('form[name=signupform] input[name={{field.name}}]').attr('ng-minlength') + " letters";
                                 }else if (input.$error.maxlength){
-                                    $scope.register_{{field.name}}_error = "At least " + $('form[name=signupform] input[name={{field.name}}]').attr('ng-maxlength') + " letters";
+                                    $scope.register[field].error = "At least " + $('form[name=signupform] input[name={{field.name}}]').attr('ng-maxlength') + " letters";
                                 }else if (input.$error.email){
-                                    $scope.register_{{field.name}}_error = "Email format incorrect";
+                                    $scope.register[field].error = "Email format incorrect";
                                 }else if (input.$error.usernameTaken){
-                                    $scope.register_{{field.name}}_error = "Username has been registered";
+                                    $scope.register[field].error = "Username has been registered";
                                 }else if (input.$error.emailTaken){
-                                    $scope.register_{{field.name}}_error = "Email has been registered";
+                                    $scope.register[field].error = "Email has been registered";
                                 }else if (input.$error.pwNotMatch){
-                                    $scope.register_password2_error = "Not match/incorrect";
+                                    $scope.register[field].error = "Not match/incorrect";
                                 }
                             }
                         },1000);
                     }
                 );
-            {% endfor %}
+            }
+        },5000);
+            
+  
+
         }
     ])
 </script>
