see #18 use this.exp to get the field value

--- a/competitors/templates/registration/register.html
+++ b/competitors/templates/registration/register.html
@@ -36,7 +36,7 @@
                 <div class="form-group">
                     <div class="agreement col-sm-offset-2">
                         <label>
-                            <input ng-model="register_agreement" required name="agreement" type="checkbox"/>
+                            <input ng-model="register.agreement" required name="agreement" type="checkbox"/>
                             I have read and agree with the <a href="" data-toggle="modal" data-target="#agreementbox">Agreement</a>
                         </label>
                     </div>
@@ -66,67 +66,53 @@
 
 <script>
     competitorsApp.controller('register',['$scope','$http','$timeout',function($scope,$http,$timeout){
-            $scope.register_agreement = false;
-            var list = ["first_name","last_name","username","email","password2","password1"];
+        $scope.register_agreement = false;
+        var list = ["first_name","last_name","username","email","password2","password1"];
 
-            // $scope.$watch("register", function(){
-            //     console.log($scope.register);
-            //     for (field in $scope.register){
-            //         console.log(field)
-            //     }
-            // })
-
-                {% for f1 in form %}
-                    var field = "{{f1.name}}";
-                    $timeout(function(){return;},1000);
-                    console.log(field)
-                    $scope.$watch('signupform.'+field+'.$viewValue',
-                    function(newVal){
-
-                        console.log(field);
-                        $timeout.cancel($scope.register[field].timer);
-                        $scope.register[field].timer = $timeout(function() {
-                            var input = $scope.signupform[field];
-                            console.log(newVal);
-                            if (newVal){
-                                $scope.register[field].init = true;
-                                console.log(field + $scope.register[field].init);
-                            }else if (newVal == undefined && $scope.register[field].init == undefined){
-                                $scope.register[field].init = false;
-                                console.log(field + $scope.register[field].init);
-                            }else if ($scope.register[field].init == false){
-                                $scope.register[field].init = true;
-                                console.log(field + $scope.register[field].init);
+        $scope.$watch("register", function(){
+            for (field in $scope.register){
+                $scope.$watch('signupform.'+field+'.$viewValue',
+                function(newVal){
+                    var field = $(this)[0].exp.split('.')[1];
+                    console.log(field);
+                    $timeout.cancel($scope.register[field].timer);
+                    $scope.register[field].timer = $timeout(function() {
+                        var input = $scope.signupform[field];
+                        console.log(newVal);
+                        if (newVal){
+                            $scope.register[field].init = true;
+                            console.log(field + $scope.register[field].init);
+                        }else if (newVal == undefined && $scope.register[field].init == undefined){
+                            $scope.register[field].init = false;
+                            console.log(field + $scope.register[field].init);
+                        }else if ($scope.register[field].init == false){
+                            $scope.register[field].init = true;
+                            console.log(field + $scope.register[field].init);
+                        }
+                        $scope.register[field].has_error = input.$invalid;
+                        if (input.$invalid && $scope.register[field].init){
+                            if (input.$error.required){
+                                $scope.register[field].error = "This field is required";
+                            }else if (input.$error.pattern){
+                                $scope.register[field].error = "Can only contain letters and/or numbers";
+                            }else if (input.$error.minlength){
+                                $scope.register[field].error = "At least " + $('form[name=signupform] input[name={{field.name}}]').attr('ng-minlength') + " letters";
+                            }else if (input.$error.maxlength){
+                                $scope.register[field].error = "At least " + $('form[name=signupform] input[name={{field.name}}]').attr('ng-maxlength') + " letters";
+                            }else if (input.$error.email){
+                                $scope.register[field].error = "Email format incorrect";
+                            }else if (input.$error.usernameTaken){
+                                $scope.register[field].error = "Username has been registered";
+                            }else if (input.$error.emailTaken){
+                                $scope.register[field].error = "Email has been registered";
+                            }else if (input.$error.pwNotMatch){
+                                $scope.register[field].error = "Not match/incorrect";
                             }
-                            $scope.register[field].has_error = input.$invalid;
-                            if (input.$invalid && $scope.register[field].init){
-                                if (input.$error.required){
-                                    $scope.register[field].error = "This field is required";
-                                }else if (input.$error.pattern){
-                                    $scope.register[field].error = "Can only contain letters and/or numbers";
-                                }else if (input.$error.minlength){
-                                    $scope.register[field].error = "At least " + $('form[name=signupform] input[name={{field.name}}]').attr('ng-minlength') + " letters";
-                                }else if (input.$error.maxlength){
-                                    $scope.register[field].error = "At least " + $('form[name=signupform] input[name={{field.name}}]').attr('ng-maxlength') + " letters";
-                                }else if (input.$error.email){
-                                    $scope.register[field].error = "Email format incorrect";
-                                }else if (input.$error.usernameTaken){
-                                    $scope.register[field].error = "Username has been registered";
-                                }else if (input.$error.emailTaken){
-                                    $scope.register[field].error = "Email has been registered";
-                                }else if (input.$error.pwNotMatch){
-                                    $scope.register[field].error = "Not match/incorrect";
-                                }
-                            }
-                        },1000);
-                    }
-                );
-                {% endfor %}
-            
+                        }
+                    },1000);
+                });
 
-            
-  
-
-        }
-    ])
+            }
+        })           
+    }])
 </script>
