--- a/competitors/templates/competitors/agreement.html
+++ b/competitors/templates/competitors/agreement.html
@@ -9,8 +9,8 @@
       			<h4>Term comes soon. It is under Federal Law.</h4>
       		</div>
       		<div class="modal-footer">
-        		<button type="button" class="btn btn-default" ng-click="register_agreement=false" data-dismiss="modal">Disagree</button>
-        		<button type="button" class="btn btn-primary" ng-click="register_agreement=true" data-dismiss="modal">Agree</button>
+        		<button type="button" class="btn btn-default" ng-click="register.agreement=false" data-dismiss="modal">Disagree</button>
+        		<button type="button" class="btn btn-primary" ng-click="register.agreement=true" data-dismiss="modal">Agree</button>
       		</div>
     	</div><!-- /.modal-content -->
   	</div><!-- /.modal-dialog -->
