--- a/competitors/templates/competitors/profile.html
+++ b/competitors/templates/competitors/profile.html
@@ -76,21 +76,64 @@
             </div>
             <div class="text-center" id="left-text">
                 <h4>{{currentUser.user.username}}</h4>
+            </div>
+
+                
+            <div class="panel panel-default col-md-offset-2 col-md-8 cp-profile-nav">
+                <div class="panel-body row ">
+                    <div class="col-md-4 cp-profile-nav-content">
+                        <a href="javascript:;" ng-click="personalshow=true;favoriteshow=false;friendsshow=false;">Personal</a>
+                    </div>
+                    <div class="col-md-4 cp-profile-nav-content">
+                        <a href="javascript:;" ng-click="personalshow=false;favoriteshow=true;friendsshow=false;">Favorite</a>
+                    </div>
+                    <div class="col-md-4 cp-profile-nav-content">
+                        <a href="javascript:;" ng-click="personalshow=false;favoriteshow=false;friendsshow=true;">Friends</a>
+                    </div>
+                </div>
+            </div>
+
+
+
+
+
+<!--             <div class="text-center" id="left-text">
+                <h4>{{currentUser.user.username}}</h4>
                 <br>
                 <p>2015.6.10 Singed in</p>
                 <p>Position</p>
                 <br>
                 <p>Personal Slogan:</p>
-            </div>
+            </div> -->
         </div>
+        
+
+
+
         <div class="col-md-7" id="right-wrapper">
-            <ul class="nav nav-tabs" id="tabs">
+            <div class="" id="personal" ng-show="personalshow">
+                <ul class="nav nav-tabs" id="tabs">
+                    <li role="presentation" class="active"><a href="#tab-1"><span class="glyphicon glyphicon-user" aria-hidden="true"></a></li>
+                    <li role="presentation"><a href="#tab-2"><span class="glyphicon glyphicon-star" aria-hidden="true"></a></li>
+                    <li role="presentation"><a href="#tab-3"><span class="glyphicon glyphicon-time" aria-hidden="true"></a></li>
+                </ul>    
+            </div>
+            <div class="" id="favorite" ng-show="favoriteshow">
+                <ul class="nav nav-tabs" id="tabs">
+                    <li role="presentation" class="active"><a href="#tab-1"><span class="glyphicon glyphicon-user" aria-hidden="true"></a></li>
+                    <li role="presentation"><a href="#tab-2"><span class="glyphicon glyphicon-star" aria-hidden="true"></a></li>
+                </ul>   
+            </div>
+            <div class="" id="friends" ng-show="friendsshow">
+                axxx 
+            </div>
+<!--             <ul class="nav nav-tabs" id="tabs">
                 <li role="presentation" class="active"><a href="#tab-1"><span class="glyphicon glyphicon-user" aria-hidden="true"></a></li>
                 <li role="presentation"><a href="#tab-2"><span class="glyphicon glyphicon-star" aria-hidden="true"></a></li>
                 <li role="presentation"><a href="#tab-3"><span class="glyphicon glyphicon-time" aria-hidden="true"></a></li>
             </ul>           
             <div class="tab-content">
-                <div class="tab-pane active" id="tab-1">
+                <div id="tab-1">
                     <h4>Essential Info &nbsp;&nbsp;&nbsp;
                         <a class="glyphicon glyphicon-pencil" aria-hidden="true"></a> 
                     </h4>
@@ -116,9 +159,9 @@
                         <p><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>  MSN: </p>
                     </div>
                 </div>
-                <div class="tab-pane" id="tab-2"></div>
-                <div class="tab-pane" id="tab-3"></div>
-            </div>
+                <div id="tab-2">asd</div>
+                <div id="tab-3">123</div>
+            </div> -->
         </div>
 
 <!--         <div id="info" class="panel">
@@ -189,6 +232,9 @@
 <script type="text/javascript" src="{{STATIC_URL}}competitors/js/base.js"></script>
 <script type="text/javascript">
 competitorsApp.controller('profile',['$scope', function($scope){
+    $scope.personalshow = true;
+    $scope.favoriteshow =false;
+    $scope.friendsshow =false;
     {% if currentUser.user.username = user.username %}
         $scope.self = true;
     {% endif %}
