--- a/competitors/templates/competitors/navbar.html
+++ b/competitors/templates/competitors/navbar.html
@@ -47,8 +47,19 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="navbar-collapse collapse in" id="cp-navbar-collapse" aria-expanded="false" style="height: 1px;">
       <ul class="nav navbar-nav navbar-right">
-          <li><a class="cp-navbar-a" href="/">Sign In</a></li>
-          <li><a class="cp-navbar-a" href="/">Sign Up</a></li>
+          {% if signuppage == True %}
+          <li><a class="cp-navbar-a" href="login" id="login"><small class="pull-right">Already have an account?</small></a></li>
+      {% else %}
+          {% if user.is_authenticated %}
+            <li><a class="cp-navbar-a" id="signnnnnnnnnnn" href="{% url 'django.contrib.auth.views.logout' %}?next={% firstof request.path %}">sign out</a></li>
+            <li><a class="cp-navbar-a" id="redirect" href="{% url 'see_profile' user.username %}">{{ user.username }}</a></li>
+        {% else %}
+
+            <li><a class="cp-navbar-a" data-toggle="modal" data-target="#loginbox"> Sign in </a></li>
+            <li><a class="cp-navbar-a" href="{% url 'register' %}"> Sign up</a></li>
+        {% endif %}
+      {% endif %}
+
       </ul>
 
     </div><!-- /.navbar-collapse -->
@@ -76,10 +87,8 @@
 			{% endif %}
 	    </div>
 	    <div class="col-xs-3 col-sm-3 col-md-3 cp-header-container">
-	    	<div class="visible-xs-inline cp-header-wrapper">
-				<span>Collapse</span>
-			</div>
-	    	<div class="hidden-xs cp-header-wrapper">
+
+	    	<div class="cp-header-wrapper cp-sign-right">
 	    	{% if signuppage == True %}
 					<a href="login" id="login"><small class="pull-right">Already have an account?</small></a>
 			{% else %}
