--- a/competitors/templates/competitors/profile.html
+++ b/competitors/templates/competitors/profile.html
@@ -122,12 +122,12 @@
                     <div class="tab-pane cp-profile-pane active" id="tab-1">
                         <div class="panel panel-default">
                             <div class="panel-heading">
-                                <h4>Essential Info &nbsp;&nbsp;&nbsp;
-                                    <a class="glyphicon glyphicon-pencil" aria-hidden="true"></a> 
-                                </h4>
+                                Essential Info &nbsp;&nbsp;&nbsp;
+                                <a href="javascript:;" class="glyphicon glyphicon-pencil" aria-hidden="true"></a> 
+                                
                             </div>
                             
-                            <div class="text-left panel-body row">
+                            <div class="text-left panel-body">
                                 <p>Username: </p>
                                 <p>First Name: </p>
                                 <p>Last Name: </p>
@@ -139,9 +139,8 @@
                         
                         <div class="panel panel-default">
                             <div class="panel-heading"> 
-                                <h4>Contact Info &nbsp;&nbsp;&nbsp;
-                                    <a class="glyphicon glyphicon-pencil" aria-hidden="true"></a> 
-                                </h4>
+                                Contact Info &nbsp;&nbsp;&nbsp;
+                                    <a href="javascript:;" class="glyphicon glyphicon-pencil" aria-hidden="true"></a> 
                             </div>
                             <div class="panel-body text-left">
                                 <p><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>  Email: </p>
@@ -163,11 +162,25 @@
                     <li role="presentation"><a href="#tab-22"><span class="glyphicon glyphicon-star" aria-hidden="true">Favorite Players</a></li>
                 </ul> 
                 <div class="tab-content">  
-                    <div class="tab-pane active" id="tab-21">
+                    <div class="tab-pane active cp-profile-pane" id="tab-21">
                         {% for team in teamfollows %}
+                            <div class="panel panel-default">
+                                <div class="panel-heading">
+                                    {{team.name}}
+                                </div>
+                                <div class="panel-body row">
+                                    <div class="col-sm-3">
+                                        <img style="width:100%;" src="{{team.icon_url}}"/>
+                                    </div>
+                                    <div class="col-sm-9">
+                                        {{team.followers.count}}
+                                    </div>
+                                </div>
+                               
+                            </div>
                         {% endfor %}
                     </div>
-                    <div class="tab-pane" id="tab-22">
+                    <div class="tab-pane cp-profile-pane" id="tab-22">
                         {% for player in playerfollows %}
                         {% endfor %}
                     </div>
